--- a/src/Bloggy.Client.Web/packages.config
+++ b/src/Bloggy.Client.Web/packages.config
@@ -1,11 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AspNet.Identity.RavenDB" version="1.0.0-pre03" targetFramework="net45" />
   <package id="Autofac" version="3.1.3" targetFramework="net45" />
   <package id="Autofac.Mvc5" version="3.0.0-rc1" targetFramework="net45" />
   <package id="AutoMapper" version="2.2.1" targetFramework="net45" />
   <package id="FontAwesome" version="3.2.1" targetFramework="net45" />
   <package id="jQuery" version="1.9.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.8.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.Core" version="1.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.0" targetFramework="net45" />
