--- a/utils/Bloggy.Client.Web.Migrator/Bloggy.Client.Web.Migrator.csproj
+++ b/utils/Bloggy.Client.Web.Migrator/Bloggy.Client.Web.Migrator.csproj
@@ -11,6 +11,8 @@
     <AssemblyName>Bloggy.Client.Web.Migrator</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -32,7 +34,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Raven.Abstractions">
+      <HintPath>..\..\packages\RavenDB.Client.2.5.2700\lib\net45\Raven.Abstractions.dll</HintPath>
+    </Reference>
+    <Reference Include="Raven.Client.Lightweight">
+      <HintPath>..\..\packages\RavenDB.Client.2.5.2700\lib\net45\Raven.Client.Lightweight.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,13 +51,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ObjectDumper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Bloggy.Client.Web\Bloggy.Client.Web.csproj">
+      <Project>{dbfbe9d0-4fcf-4d7f-b146-d5a28a447856}</Project>
+      <Name>Bloggy.Client.Web</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\src\Bloggy.Domain\Bloggy.Domain.csproj">
+      <Project>{bf5ff3a1-4877-4323-a457-d65e8764580e}</Project>
+      <Name>Bloggy.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\src\Bloggy.Wrappers.Akismet\Bloggy.Wrappers.Akismet.csproj">
+      <Project>{f9889441-ec1a-4bb8-842f-d6eebf0d2e84}</Project>
+      <Name>Bloggy.Wrappers.Akismet</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
