--- a/src/Bloggy.Client.Web/Web.config
+++ b/src/Bloggy.Client.Web/Web.config
@@ -26,6 +26,9 @@
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
+    <modules>
+      <remove name="FormsAuthenticationModule" />
+    </modules>
   </system.webServer>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
