--- a/src/Bloggy.Client.Web/Bloggy.Client.Web.csproj
+++ b/src/Bloggy.Client.Web/Bloggy.Client.Web.csproj
@@ -418,6 +418,7 @@
     <Compile Include="RequestModels\LoginRequestModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestModels\ManagementUserRequestModel.cs" />
+    <Compile Include="RequestModels\UserCreationRequestModel.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="StringResources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -459,6 +460,7 @@
     <Content Include="Views\Account\CreateManagementUser.cshtml" />
     <Content Include="Views\Tags\Index.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Account\Manage.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
