--- a/src/Bloggy.Client.Web/packages.config
+++ b/src/Bloggy.Client.Web/packages.config
@@ -2,8 +2,9 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="AspNet.Identity.RavenDB" version="1.0.0-pre05" targetFramework="net45" />
-  <package id="Autofac" version="3.1.3" targetFramework="net45" />
-  <package id="Autofac.Mvc5" version="3.0.0-rc1" targetFramework="net45" />
+  <package id="Autofac" version="3.2.0" targetFramework="net45" />
+  <package id="Autofac.Mvc5" version="3.2.0" targetFramework="net45" />
+  <package id="Autofac.WebApi2" version="3.2.0" targetFramework="net45" />
   <package id="AutoMapper" version="2.2.1" targetFramework="net45" />
   <package id="dotless" version="1.4.0.0" targetFramework="net45" />
   <package id="FontAwesome" version="4.0.3.1" targetFramework="net45" />
@@ -12,15 +13,15 @@
   <package id="Less.js" version="1.5.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="1.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Mvc" version="5.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="5.1.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.2" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi" version="5.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi" version="5.1.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.1.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.1.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebHelpers" version="3.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebPages" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="3.1.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.Data" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.WebData" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.0.0" targetFramework="net45" />
@@ -38,5 +39,7 @@
   <package id="RavenDB.Client" version="2.5.2700" targetFramework="net45" />
   <package id="TinyMCE" version="4.0.8" targetFramework="net45" />
   <package id="Twitter.Bootstrap.Less" version="3.0.3" targetFramework="net45" />
+  <package id="WebApiDoodle.Web" version="3.0.0-pre01" targetFramework="net45" />
+  <package id="WebApiDoodle.Web.Meta" version="3.0.0-pre01" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
